# condition-space-sharpness

./: .gitignore  README.md  debug_output.txt  pyproject.toml  visualize_samples.py  visualize_samples_xt.py
cond_Jacobian/: .gitignore  batch.sh  batch_cma.sh  batch_jp.sh  calculate_condition_Jacobin_norm_CJDDT.py  calculate_condition_Jacobin_norm_CJDDT_test.py  cifar10_prompts.csv  cifar10_prompts_nm.csv  clip_model_analysis.ipynb  clip_model_analysis.py  condition_Jacobian_dynamics_during_training.py  condition_Jacobian_dynamics_during_training_diff_prompts.py  condition_Jacobian_dynamics_during_training_diff_prompts_pl.py  condition_Jacobian_dynamics_during_training_test.py  debug_clip_mask.py  jacobian_classification.py  jacobian_classification_configurable.py  jacobian_classification_configurable_v2.py  jacobian_classification_diff_timestep.py  merge_prompt_and_generate_nm.ipynb  pyproject.toml  sd2_test.ipynb  test.ipynb  verify_manual_forward.py  visualize_CJDDT.ipynb  visualize_CJDDT_test.ipynb  visualize_jacobian_classification.ipynb
cond_Jacobian/01_Primary_Code/: perturbation_text_embedding_generation.ipynb
cond_Jacobian/02_Supplementary_Code/: analyze_total.py  attraction_basin_analysis.ipynb  basin_alignment_analysis.ipynb  cond_sharpness_dynamics_in_attraction_basin.py  memorization_basin_analysis.py  prompt_sensitivity.ipynb  prompt_sensitivity.py  pure_noise_basin_analysis.py  visualize_pure_noise_memorization.ipynb
cond_Jacobian/03_Archived_Code/: analysis.ipynb  analysis_attention_output.py  analyze_all_100.py  analyze_all_steps_CA.py  analyze_attention_distribution.py  analyze_first_token.py  analyze_uncond_traj_attention.py  attraction_basin_test.py  calc_stats.py  check_mitigation.py  compare_exp_cond_and_uncond.py  cond_sharpness_xt_dynamics_in_attraction_basin.py  conditional_covariace.py  jacobian_dynamics_visualization.ipynb  jacobian_norm_sorted_IE.csv  jacobian_norm_sorted_TE.csv  memorization_on_CA.py  pure_noise_jacobian_t_T_analysis.ipynb  (+4 more)
(+30 files in other folders)
