[project]
name = "cssin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "click>=8.2.1",
    "deeplake<4",
    "einops>=0.8.1",
    "ema-pytorch>=0.7.7",
    "gputil>=1.4.0",
    "hub>=3.0.1",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pot>=0.9.6.post1",
    "pytorch-fid>=0.3.0",
    "pytorch-msssim>=1.0.0",
    "ruptures>=1.1.10",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sympy>=1.13.1",
    "torch>=2.5.1",
    "torch-fidelity>=0.3.0",
    "torchmetrics>=1.8.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.workspace]
members = [
    "brain-score",
]
