[project]
name = "init-noise-diffusion-memorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "clip>=0.2.0",
    "datasets>=2.14.4",
    "diffusers==0.18.2",
    "ftfy>=6.2.0",
    "huggingface-hub==0.23.5",
    "image-reward>=1.5",
    "lpips>=0.1.4",
    "matplotlib>=3.7.5",
    "nltk>=3.9.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.3",
    "regex>=2024.11.6",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "torch==2.3.1",
    "torchvision>=0.18.1",
    "tqdm>=4.67.1",
    "transformers==4.41.2",
    "umap-learn>=0.5.7",
    "wandb>=0.23.1",
]
